--- a/py/multiethnic_literature.html
+++ b/py/multiethnic_literature.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Multiethnic Literature: Global Neo-Victorians | Undisciplining the Victorian Classroom</title><!-- Change -->
-		<meta name="description" content="Uses global steampunk stories and neo-Victorian novels to decenter Jane Eyre and encourage students to explore “whiteness” as a category of ethnicity."/><!-- Change -->
+    <title>Multiethnic Literature: Global Neo-Victorians | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="Uses global steampunk stories and neo-Victorian novels to decenter Jane Eyre and encourage students to explore “whiteness” as a category of ethnicity."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -37,9 +37,9 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 id="syllabus">Multiethnic Literature: Global Neo-Victorians</h2><!-- Change -->
+				<h2 id="syllabus">Multiethnic Literature: Global Neo-Victorians</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/syllabi/uvc_0067-1800px.jpg" srcset="/img/syllabi/uvc_0067-1800px.jpg 1800w, /img/syllabi/uvc_0067-1650px.jpg 1650w, /img/syllabi/uvc_0067-1500px.jpg 1500w, /img/syllabi/uvc_0067-1350px.jpg 1350w, /img/syllabi/uvc_0067-1200px.jpg 1200w, /img/syllabi/uvc_0067-1050px.jpg 1050w, /img/syllabi/uvc_0067-900px.jpg 900w, /img/syllabi/uvc_0067-750px.jpg 750w, /img/syllabi/uvc_0067-600px.jpg 600w, /img/syllabi/uvc_0067-450px.jpg 450w, /img/syllabi/uvc_0067-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A cityscape featuring a large, complex clock in the background and a hot air balloon flying above. "/><!-- Change -->
+          	<img src="/img/syllabi/uvc_0067-1800px.jpg" srcset="/img/syllabi/uvc_0067-1800px.jpg 1800w, /img/syllabi/uvc_0067-1650px.jpg 1650w, /img/syllabi/uvc_0067-1500px.jpg 1500w, /img/syllabi/uvc_0067-1350px.jpg 1350w, /img/syllabi/uvc_0067-1200px.jpg 1200w, /img/syllabi/uvc_0067-1050px.jpg 1050w, /img/syllabi/uvc_0067-900px.jpg 900w, /img/syllabi/uvc_0067-750px.jpg 750w, /img/syllabi/uvc_0067-600px.jpg 600w, /img/syllabi/uvc_0067-450px.jpg 450w, /img/syllabi/uvc_0067-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A cityscape featuring a large, complex clock in the background and a hot air balloon flying above. "/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -138,10 +138,10 @@
 					<h3 id="works-cited">Works Cited</h3>
 
 					<p>Bront&euml;, Charlotte. <em>Jane Eyre: An Authoritative Text, Contexts, Criticism</em>. Edited by Deborah Lutz, 4th ed., W.W. Norton, 2016.</p>
-<p>Chadron State College Institutional Research. <em>Chadron State College Enrollment Information</em>. 26 Jan. 2022, <a href="https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf">https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf</a>.</p>
-<p>Chatterjee, Ronjaunee, et al. &ldquo;Introduction: Undisciplining Victorian Studies.&rdquo; <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369&ndash;91, <a href="https://doi.org/10.2979/victorianstudies.62.3.01">https://doi.org/10.2979/victorianstudies.62.3.01</a>.</p>
-<p>Coleman, Tyrese L. &ldquo;Reading Jane Eyre While Black: The Privilege of Escapism Is Not Allowed for Me.&rdquo; <em>Literary Hub</em>, 28 Aug. 2017, <a href="https://lithub.com/reading-jane-eyre-while-black/">https://lithub.com/reading-jane-eyre-while-black/</a>.</p>
-<p>Crenshaw, Kimberl&eacute;. <em>The Urgency of Intersectionality</em>. <a href="https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare">https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare</a>. TED: Ideas Worth Spreading.</p>
+<p>Chadron State College Institutional Research. <em>Chadron State College Enrollment Information</em>. 26 Jan. 2022, <a href="https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf" aria-label="External Link">https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf</a>.</p>
+<p>Chatterjee, Ronjaunee, et al. &ldquo;Introduction: Undisciplining Victorian Studies.&rdquo; <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369&ndash;91, <a href="https://doi.org/10.2979/victorianstudies.62.3.01" aria-label="External Link">https://doi.org/10.2979/victorianstudies.62.3.01</a>.</p>
+<p>Coleman, Tyrese L. &ldquo;Reading Jane Eyre While Black: The Privilege of Escapism Is Not Allowed for Me.&rdquo; <em>Literary Hub</em>, 28 Aug. 2017, <a href="https://lithub.com/reading-jane-eyre-while-black/" aria-label="External Link">https://lithub.com/reading-jane-eyre-while-black/</a>.</p>
+<p>Crenshaw, Kimberl&eacute;. <em>The Urgency of Intersectionality</em>. <a href="https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare" aria-label="External Link">https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare</a>. TED: Ideas Worth Spreading.</p>
 <p>hooks, bell. <em>Teaching to Transgress: Education As the Practice of Freedom</em>. Routledge, 1994.</p>
 <p>McIntosh, Peggy. &ldquo;White Privilege: Unpacking the Invisible Knapsack.&rdquo; <em>Peace and Freedom</em>, vol. 49, 1989, pp. 10&ndash;12.</p>
 <p>Moy, Olivia Loksing. &ldquo;Reading in the Aftermath: An Asian American Jane Eyre.&rdquo; <em>Victorian Studies</em>, vol. 62, no. 3, 2020, pp. 406&ndash;20.</p>
@@ -163,20 +163,20 @@
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					Kimberly Cox (she/her) is Associate Professor of English at Chadron State College where she teaches courses in British literature, gender and sexuality, multiethnic literature, the novel, and composition. She received her Ph.D. in Victorian literature and her graduate certificate in Women’s and Gender Studies from Stony Brook University. She served as co-managing editor of Victorian Literature and Culture from 2016–18. Her work on hands, haptics, and sexuality has appeared in Victorian Network, Victorians: Journal of Culture and Literature, Nineteenth-Century Literature, and Nineteenth-Century Gender Studies, the journal for which she coedited the special issue “‘Teaching to Trangress’ in the Emergency Remote Classroom.” Her collaborative work on pedagogy is forthcoming in Victorian Literature and Culture. Her book, Touch, Sexuality, and Hands in British Literature, 1740–1901, was published by Routledge in 2021.
+					Kimberly Cox (she/her) is Associate Professor of English at Chadron State College where she teaches courses in British literature, gender and sexuality, multiethnic literature, the novel, and composition. She received her Ph.D. in Victorian literature and her graduate certificate in Women’s and Gender Studies from Stony Brook University. She served as co-managing editor of <em>Victorian Literature and Culture</em> from 2016–18. Her work on hands, haptics, and sexuality has appeared in <em>Victorian Network, Victorians: Journal of Culture and Literature, Nineteenth-Century Literature, and Nineteenth-Century Gender Studies</em>, the journal for which she coedited the special issue “‘Teaching to Trangress’ in the Emergency Remote Classroom.” Her collaborative work on pedagogy is forthcoming in <em>Victorian Literature and Culture</em>. Her book, <em>Touch, Sexuality, and Hands in British Literature, 1740–1901</em>, was published by Routledge in 2021.
 				</section>
 
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<div>
-<div>Meseguer, Enrique. <em>Steampunk City</em>. 11 Dec. 2017, <a href="https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/">https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/</a>. Pixabay.</div>
+<div>Meseguer, Enrique. <em>Steampunk City</em>. 11 Dec. 2017, <a href="https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/" aria-label="External Link">https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/</a>. Pixabay.</div>
 </div>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Kimberly Cox, dev. “Multiethnic Literature: Global Neo-Victorians.” Jacob Romanow, peer rev.; Kimberly Cox; Riya Das, syllabus cluster dev.; Pearl Chaozon Bauer; Adrian S. Wisnicki, syllabus guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/multiethnic_literature.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/multiethnic_literature.html</a>.</p><!-- Change -->
+					<p>Kimberly Cox, dev. “Multiethnic Literature: Global Neo-Victorians.” Jacob Romanow, peer rev.; Kimberly Cox; Riya Das, syllabus cluster dev.; Pearl Chaozon Bauer; Adrian S. Wisnicki, syllabus guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/syllabi/multiethnic_literature.html" class="cite-link" >https://undiscipliningvc.org/html/syllabi/multiethnic_literature.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
