--- a/py/multiethnic_literature.html
+++ b/py/multiethnic_literature.html
@@ -162,13 +162,13 @@
 
 					<p>Bront&euml;, Charlotte. <em>Jane Eyre: An Authoritative Text, Contexts, Criticism</em>. Edited by Deborah Lutz, 4th ed., W.W. Norton, 2016.</p>
 
-					<p>Chadron State College Institutional Research. <a aria-label="External Link" href="https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf"><em>Chadron State College Enrollment Information</em></a> (PDF). 26 Jan. 2022.</p>
+					<p>Chadron State College Institutional Research. “<a aria-label="External Link" href="https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf">Chadron State College Enrollment Information</a>” (PDF). 26 Jan. 2022.</p>
 
 					<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://doi.org/10.2979/victorianstudies.62.3.01">Introduction: Undisciplining Victorian Studies</a>.”<em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 369–91.</p>
 
 					<p>Coleman, Tyrese L. “<a href="https://lithub.com/reading-jane-eyre-while-black/" aria-label="External Link">Reading Jane Eyre While Black: The Privilege of Escapism Is Not Allowed for Me</a>.” <em>Literary Hub</em>, 28 Aug. 2017.</p>
 
-					<p>Crenshaw, Kimberl&eacute;. <a aria-label="External Link" href="https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare"><em>The Urgency of Intersectionality</em></a>. TED: Ideas Worth Spreading.</p>
+					<p>Crenshaw, Kimberl&eacute;. “<a aria-label="External Link" href="https://www.ted.com/talks/kimberle_crenshaw_the_urgency_of_intersectionality?utm_campaign=tedspread&amp;utm_medium=referral&amp;utm_source=tedcomshare">The Urgency of Intersectionality</a>.” <em>TED: Ideas Worth Spreading</em>.</p>
 
 					<p>hooks, bell. <em>Teaching to Transgress: Education As the Practice of Freedom</em>. Routledge, 1994.</p>
 
@@ -204,7 +204,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>&nbsp;Meseguer, Enrique. <a aria-label="External Link" href="https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/"><em>Steampunk City</em></a>. 11 Dec. 2017, pixabay. Free to use under the <a aria-label="External Link" href="https://pixabay.com/service/terms/">Content License</a>. No attribution required.</p>
+					<p>Meseguer, Enrique. <a aria-label="External Link" href="https://pixabay.com/photos/steampunk-city-clock-clock-city-3006650/"><em>Steampunk City</em></a>. 11 Dec. 2017, pixabay. Free to use under the <a aria-label="External Link" href="https://pixabay.com/service/terms/">Content License</a>. No attribution required.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
