--- a/py/multiethnic_literature.html
+++ b/py/multiethnic_literature.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Multiethnic Literature: Global Neo-Victorians</h2>
 					<div class="aspect-ratio-box">
-          	<img  style="object-position: 50% 50%;" src="/img/syllabi/uvc_0067-1800px.jpg" srcset="/img/syllabi/uvc_0067-1800px.jpg 1800w, /img/syllabi/uvc_0067-1650px.jpg 1650w, /img/syllabi/uvc_0067-1500px.jpg 1500w, /img/syllabi/uvc_0067-1350px.jpg 1350w, /img/syllabi/uvc_0067-1200px.jpg 1200w, /img/syllabi/uvc_0067-1050px.jpg 1050w, /img/syllabi/uvc_0067-900px.jpg 900w, /img/syllabi/uvc_0067-750px.jpg 750w, /img/syllabi/uvc_0067-600px.jpg 600w, /img/syllabi/uvc_0067-450px.jpg 450w, /img/syllabi/uvc_0067-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A cityscape featuring a large, complex clock in the background and a hot air balloon flying above. "/>
+          	<img src="/img/syllabi/uvc_0067-1800px.jpg" srcset="/img/syllabi/uvc_0067-1800px.jpg 1800w, /img/syllabi/uvc_0067-1650px.jpg 1650w, /img/syllabi/uvc_0067-1500px.jpg 1500w, /img/syllabi/uvc_0067-1350px.jpg 1350w, /img/syllabi/uvc_0067-1200px.jpg 1200w, /img/syllabi/uvc_0067-1050px.jpg 1050w, /img/syllabi/uvc_0067-900px.jpg 900w, /img/syllabi/uvc_0067-750px.jpg 750w, /img/syllabi/uvc_0067-600px.jpg 600w, /img/syllabi/uvc_0067-450px.jpg 450w, /img/syllabi/uvc_0067-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A cityscape featuring a large, complex clock in the background and a hot air balloon flying above."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
