add kimberly to collab

--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -59,6 +59,7 @@
 						<li><strong>Lindsey N. Chappell</strong> (Georgia Southern University)</li>
 						<li><strong>Sanjana Chowdhury</strong> (Texas Christian University)</li>
 						<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
+						<li><strong>Kimberly Cox</strong> (Chadron State College)</li>
 						<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
 						<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
 						<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
