--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -124,7 +124,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>Ghosh, Gourav. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. Wikimedia Commons. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
+					<p>Ghosh, Gourav. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
