u das site map contributor page

--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -61,6 +61,7 @@
 						<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 						<li><strong>Kimberly Cox</strong> (Chadron State College)</li>
 						<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
+						<li><strong> Riya Das</strong> (Prairie View A&M University)</li>
 						<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
 						<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
 						<li><strong>Melissa Free</strong> (Arizona State University)</li>
