--- a/sitemap.html
+++ b/sitemap.html
@@ -100,6 +100,7 @@
 								<li>Beyond “Victorian” Literature
 									<ol>
 										<li><a href="/html/syllabi/multiethnic_literature.html">Multiethnic Literature: Global Neo-Victorians</a></li>
+										<li><a href="/html/syllabi/representative_survey.html"> British Literature II: A Representative Survey</a></li>
 									</ol>
 								</li>
 
