--- a/html/syllabi/representative_survey.html
+++ b/html/syllabi/representative_survey.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Jacob Romanow</p>
 						
-						<p><strong>Syllabus Cluster Developers:</strong> Kimberly Cox <a class="mail" href="mailto:kcox@csc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a> | Riya Das <a class="mail" href="ridas@pvamu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Syllabus Cluster Developers:</strong> Kimberly Cox <a class="mail" href="mailto:kcox@csc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a> | Riya Das <a class="mail" href="mailto:ridas@pvamu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Syllabus Guides:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a> | Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
