--- a/py/representative_survey.html
+++ b/py/representative_survey.html
@@ -126,7 +126,7 @@
 
 					<p>“<a aria-label="External Link" href="https://www.rmg.co.uk/stories/topics/what-happened-during-victorian-era">What Happened during the Victorian Era</a>.” <em>Royal Museums Greenwich</em>, 2021.</p>
 					
-					<p>Wisnicki, Adrian. “<a aria-label="External Link" href="https://onemorevoice.org/books.html">Book-Length Published Works</a>.” <em>One More Voice</em>, solidarity edition, 2022-23.</p>
+					<p>Wisnicki, Adrian. “<a aria-label="External Link" href="https://onemorevoice.org/html/materials/books.html">Book-Length Published Works</a>.” <em>One More Voice</em>, solidarity edition, 2022-23.</p>
 				</section>
 
 				<section aria-labelledby="series">
