--- a/html/syllabi/representative_survey.html
+++ b/html/syllabi/representative_survey.html
@@ -143,7 +143,7 @@
 
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
-					<p>Dingley, Andy. <a aria-label="External Link" href="https://en.wikipedia.org/wiki/File:Battersea_Power_Station,_1934_with_only_two_chimneys_(Our_Generation,_1938).jpg"><em>Battersea Power Station, 1934 with Only Two Chimneys (Our Generation, 1938)</em>.</a> 1934, <em>Wikimedia Commons</em>.</p>
+					<p>Dingley, Andy. <a aria-label="External Link" href="https://en.wikipedia.org/wiki/File:Battersea_Power_Station,_1934_with_only_two_chimneys_(Our_Generation,_1938).jpg"><em>Battersea Power Station, 1934 with Only Two Chimneys (Our Generation, 1938)</em>.</a> 1934, <em>Wikimedia Commons</em>. Public domain.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
