--- a/html/syllabi/representative_survey.html
+++ b/html/syllabi/representative_survey.html
@@ -120,7 +120,7 @@
 
 					<p>Levy, Amy. “<a aria-label="External Link" href=" https://www.gutenberg.org/files/57447/57447-h/57447-h.htm#Page_1">The Romance of a Shop</a>.” <em>Project Gutenberg</em>, 2020.</p>
 
-					<p>Schriener, Olive. <em>Dream Life and Real Life</em>. Roberts Brothers, 1893.</p>
+					<p>Schreiner, Olive. <em>Dream Life and Real Life</em>. Roberts Brothers, 1893.</p>
 
 					<p>Sharpe, Christina. <em>In the Wake: On Blackness and Being</em>. Duke University Press, 2016.</p>
 
