--- a/html/syllabi/multiethnic_literature.html
+++ b/html/syllabi/multiethnic_literature.html
@@ -164,7 +164,7 @@
 
 					<p>Chadron State College Institutional Research. “<a aria-label="External Link" href="https://www.csc.edu/media/website/content-assets/documents/pdf/institutional-research/Enrollment-Data-fall-2021-01_26_22FINAL.pdf">Chadron State College Enrollment Information</a>” (PDF). 26 Jan. 2022.</p>
 
-					<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://doi.org/10.2979/victorianstudies.62.3.01">Undisciplining Victorian Studies</a>.”<em>Los Angeles Review of Books</em>, July 2020.</p>
+					<p>Chatterjee, Ronjaunee, et al. “<a aria-label="External Link" href="https://lareviewofbooks.org/article/undisciplining-victorian-studies">Undisciplining Victorian Studies</a>.”<em>Los Angeles Review of Books</em>, July 10, 2020.</p>
 
 					<p>Coleman, Tyrese L. “<a href="https://lithub.com/reading-jane-eyre-while-black/" aria-label="External Link">Reading Jane Eyre While Black: The Privilege of Escapism Is Not Allowed for Me</a>.” <em>Literary Hub</em>, 28 Aug. 2017.</p>
 
