u zoomcast html for new zoomcast

--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -45,6 +45,12 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a aria-label="External Link" href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
+				<section aria-labelledby="collaboration-2">
+					<h3 id="collaboration-2">Collaboration</h3>
+					<div><a href="/html/zoomcasts/gao-loh-park-valdez-yan.html"><img loading="lazy" src="/img/zoomcasts/gao-loh-park-valdez-yan-930px.jpg" srcset="/img/zoomcasts/gao-loh-park-valdez-yan-930px.jpg 930w, /img/zoomcasts/gao-loh-park-valdez-yan-816px.jpg 816w, /img/zoomcasts/gao-loh-park-valdez-yan-663px.jpg 663w, /img/zoomcasts/gao-loh-park-valdez-yan-532px.jpg 532w, /img/zoomcasts/gao-loh-park-valdez-yan-465px.jpg 465w, /img/zoomcasts/gao-loh-park-valdez-yan-408px.jpg 408w, /img/zoomcasts/gao-loh-park-valdez-yan-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Menglu Gao, Sophia Hsu, Waiyee Loh, Hyungji Park, Jessica Valdez, Rae Yan"/><span>Menglu Gao, Waiyee Loh, Hyungji Park, Jessica Valdez, Rae Yan</span></a></div>
+					<p>Sophia Hsu interviews Menglu Gao, Waiyee Loh, Hyungji Park, Jessica Valdez, and Rae Yan to discuss their lesson plans on transimperial networks and East Asia.</p>
+				</section>
+
 				<section aria-labelledby="positionality-5">
 					<h3 id="positionality-5">Positionality</h3>
 					<div><a href="/html/zoomcasts/chaozon-bauer.html"><img loading="lazy" src="/img/zoomcasts/chaozon-bauer-930px.jpg" srcset="/img/zoomcasts/chaozon-bauer-930px.jpg 930w, /img/zoomcasts/chaozon-bauer-816px.jpg 816w, /img/zoomcasts/chaozon-bauer-663px.jpg 663w, /img/zoomcasts/chaozon-bauer-532px.jpg 532w, /img/zoomcasts/chaozon-bauer-465px.jpg 465w, /img/zoomcasts/chaozon-bauer-408px.jpg 408w, /img/zoomcasts/chaozon-bauer-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Pearl Chaozon Bauer"/><span>Pearl Chaozon Bauer</span></a></div>
