fix old zoomcasts for typos

--- a/html/zoomcasts/braham-ohri-simpson.html
+++ b/html/zoomcasts/braham-ohri-simpson.html
@@ -66,7 +66,7 @@
             <ol class="menu">
               <li><a href="#overview">Zoomcast Overview</a></li>
 							<li><a href="#series">Collaboration Series</a></li>
-							<li><a href="#biography">Guest Biographies</a></li>
+							<li><a href="#biographies">Guest Biographies</a></li>
               <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
             </ol>
           </section>
@@ -83,8 +83,8 @@
 						<p>This cluster of Zoomcasts reflects upon team-based scholarship as a strategy of undisciplining and empowerment in both learning and teaching. Although collaboration often lies at the heart of digital humanities projects like <em>Undisciplining the Victorian Classroom</em>, the single-scholar mode of endeavor and production often remains the default for many Victorianists. The Zoomcasts in this cluster, therefore, highlight successful collaborations within Victorian Studies and beyond in order to uncover strategies and models that Victorianists and other scholars might employ to broaden the scope and impact of their work. By doing so, scholars have the potential to develop new and exciting modes of inquiry, while breaking with traditional Eurocentric ways of engaging with Victorian and other kinds of British and Anglophone literature.</p>
 					</section>
 
-					<section aria-labelledby="biography">
-						<h3 id="biography">Guest Biographies</h3>
+					<section aria-labelledby="biographies">
+						<h3 id="biographies">Guest Biographies</h3>
 
 						<p>Kira Braham completed her Ph.D. in English at Vanderbilt University in 2020. She will join the faculty of the Louisiana School for Math, Science, and the Arts in Fall 2021. Her fledgling book project, <em>Victorian Vita Activa: Work Ethics and Prowork Politics</em>, explores nineteenth-century philosophies of work and their potential role in reenergizing and reimagining twenty-first century labor politics. Her research interests include nineteenth-century British and transatlantic literatures, Caribbean literatures, working-class literatures, histories and ethnographies of work, science fiction, and utopian studies. Her work has appeared in <em>Extrapolation</em> and <em>The Gissing Journal</em>.</p>
 
