--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -66,7 +66,7 @@
 						<li><a href="#overview">Zoomcast Overview</a></li>
 						<li><a href="#reading">Further Reading</a></li>
 						<li><a href="#series">Beyond the Literary Series</a></li>
-						<li><a href="#biography">Guest Biographies</a></li>
+						<li><a href="#biographies">Guest Biographies</a></li>
 						<li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
 					</ol>
 				</section>
@@ -93,8 +93,8 @@
 					<p>This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth-century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
 				</section>
 
-				<section aria-labelledby="biography">
-					<h3 id="biography">Guest Biographies</h3>
+				<section aria-labelledby="biographies">
+					<h3 id="biographies">Guest Biographies</h3>
 					
 					<p>Michelle Prain Brice is a Professor of Literature at Universidad Adolfo Ibáñez, Chile. She earned her Ph.D. in Literature and Cultural Studies at Pontificia Universidad Católica de Valparaíso, Chile with the support of a CONICYT grant. She obtained her M.A. in Comparative Literature at the Universidad de Chile and a professional degree in Journalism at Universidad Adolfo Ibáñez. As a journalist, she has worked for <em>El Mercurio</em> newspapers in the literary and cultural sections, where she has published several interviews and articles. Among her academic publications is the book <em>Legado Británico en Valparaíso/British Legacy in Valparaíso</em> (Ril editores, Santiago, 2011), academic articles, and book chapters on the British presence in Chile. She was a Researcher Residence at the British Library in December 2019. With Jennifer Hayward and Jessie Reeder, she was awarded Eileen Curran Field Development Grant by the Research Society for Victorian Periodicals, for digitizing British-Chilean nineteenth-century periodicals and creating a digital public archive.</p>
 					
