--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -65,7 +65,7 @@
             <ol class="menu">
               <li><a href="#overview">Zoomcast Overview</a></li>
 							<li><a href="#series">Beyond the Literary Series</a></li>
-							<li><a href="#biography">Guest Biography</a></li>
+							<li><a href="#biographies">Guest Biographies</a></li>
               <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
             </ol>
           </section>
@@ -80,8 +80,8 @@
 						<p>This cluster of Zoomcasts highlights one strategy of undisciplining Victorian studies and our syllabi: looking beyond and challenging traditional conceptions of the “literary.” While reading novels, poetry, drama, and prose will undoubtedly remain important to our work, these forms can problematically limit our ability to recognize and understand the many different ways that Indigenous, occupied, and non-white communities expressed themselves aesthetically in nineteenth-century Britain and its colonies. Our conversations focus on ways that we can alter our syllabi and pedagogical approaches in widening the scope of our classrooms in this way.</p>
 					</section>
 
-					<section aria-labelledby="biography">
-						<h3 id="biography">Guest Biographies</h3>
+					<section aria-labelledby="biographies">
+						<h3 id="biographies">Guest Biographies</h3>
 						<p>Haejoo Kim is an assistant professor in the Department of English Language and Literature at Seoul National University. She received her Ph.D. from Syracuse University in 2021. Her book project, <em>Medical Liberty and Alternative Health Practices in Nineteenth-Century Britain</em>, uncovers the historical emergence of medical liberty as a concept by examining cultural representations of alternative health practices in nineteenth-century Britain, such as anti-vaccination, hydropathy, and vegetarianism. Her writings have appeared in <em>Literature and Medicine</em>, <em>Journal of Victorian Culture</em>, and <em>Synapsis: A Health Humanities Journal</em>. She is a recipient of the 2020 Curran Fellowship from the Research Society of Victorian Periodicals.</p>
 
 						<p>Anoff Nick Cobblah will soon be defending his dissertation in English at the University of Michigan, before he joins the University of Tennessee, Knoxville as a Faculty Consultant for Professional Development in April 2022. His research on nineteenth-century literature and science investigates the ways in which communities form through writing about scientific and technological concepts. He dissertation titled "The Work of Scientific Play in Nineteenth-Century Britain" explores how the community of Victorian professional scientists, increasingly developing an identity centered on science as “work,” nonetheless continued to value recreations as part of their scientific practice. He also works in educational and professional development. His work on preparing future faculty during the COVID-19 pandemic was published in a 2020 issue of <em>To Improve the Academy</em>.</p>
