--- a/py/template-zoomcast-1.html
+++ b/py/template-zoomcast-1.html
@@ -56,8 +56,9 @@
 							<p><strong>Length:</strong> {zoomcast-length}</p><!-- Change -->
 							<p><strong>Zoomcast Date:</strong> {zoomcast-date}</p><!-- Change -->
 							<p><strong>Zoomcast Series:</strong> {zoomcast-series}</p><!-- Change -->
+							<p><strong>Copyeditor:</strong> {copyeditor}</p><!-- Change -->
 							<p><strong>Web Developer:</strong> {web-dev}</p><!-- Change -->
-							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/{yyyy-mm-dd-guest-lower-case}-transcript.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/{yyyy-mm-dd-guest-lower-case}-transcript.docx">Word</a></p><!-- Change -->
+							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/{yyyy-mm-dd-name(s)-from-transcript-file}-transcript.pdf">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/{yyyy-mm-dd-name(s)-from-transcript-file}-transcript.docx">Word</a></p><!-- Change -->
 						</div>
 					</section>
 
@@ -98,7 +99,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with {guest}.” Hosted by {host}. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year,}, <a href="/html/zoomcasts/{guest-surname-lower-case}.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/{guest-surname-lower-case}.html</a>.</p><!-- Change -->
+						<p>“Zoomcast with {guest}.” Hosted by {host}. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/zoomcasts/{guest-surname-lower-case}.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/{guest-surname-lower-case}.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
