--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -52,6 +52,8 @@
 						<p><strong>Peer Reviewer:</strong> Sarah Ohmer</p>
 
 						<p><strong>Assessment Guide:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+
+						<p><strong>Copyeditor:</strong> H Fogarty</p>
 						
 						<p><strong>Webpage Developer:</strong> Adrian S. Wisnicki</p>
 
