--- a/html/assessments/archives-of-empire.html
+++ b/html/assessments/archives-of-empire.html
@@ -164,14 +164,14 @@
 
 				<section aria-labelledby="series">
 					<h3 id="series">Students in the Archives Series</h3>
-					
+
 					<p>This cluster of assessments encourages students to intervene into Victorian Studies through original archival research. It engages students in the politics and ethics of the archive by using frameworks from such fields as Postcolonial Studies, Black Studies, and Critical Ethnic Studies. These assessments empower students to take charge of their learning by asking them to follow their own interests, make connections between the past and the present, and participate in the co-creation of knowledge.</p>
 				</section>
 
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					Katherine Judith Anderson is Associate Professor of English (Victorian literature and culture) at Western Washington University, and the author of Twisted Words: Torture and Liberalism in Imperial Britain (The Ohio State University Press, 2022). She’s also written for public outlets such as Public Books, BigCityLit, The Critical Flame, and The Strategy Bridge. Anderson is currently working on a second monograph, tentatively titled Weaponizing Mass Destruction: Planetary Biohazards at the Ends of Empire, which examines the ethics, technologies, and ecologies of biological and biochemical warfare in the literature and global histories of the late-nineteenth and early-twentieth centuries, particularly in relation to the British Empire.
+					<p> Katherine Judith Anderson is Associate Professor of English (Victorian literature and culture) at Western Washington University, and the author of <em>Twisted Words: Torture and Liberalism in Imperial Britain</em> (The Ohio State University Press, 2022). She’s also written for public outlets such as <em>Public Books</em>, <em>BigCityLit</em>, <em>The Critical Flame</em>, and <em>The Strategy Bridge</em>. Anderson is currently working on a second monograph, tentatively titled <em>Weaponizing Mass Destruction: Planetary Biohazards at the Ends of Empire</em>, which examines the ethics, technologies, and ecologies of biological and biochemical warfare in the literature and global histories of the late-nineteenth and early-twentieth centuries, particularly in relation to the British Empire.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
