add anderson to sitemap

--- a/sitemap.html
+++ b/sitemap.html
@@ -153,6 +153,12 @@
 									</ol>
 								</li>
 							</ol>
+							<li>Studdents in the Archives
+								<ol>
+									<li><a href="/html/assessments/archives-of-empire.html">Archives of Empire</a></li>
+								</ol>
+							</li>
+						</ol>
 						</li>
 
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
