add katie to contributors

--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -51,6 +51,7 @@
 				<section aria-labelledby="contribs">
 					<h3 id="contribs">Contributors</h3>
 					<ul>
+						<li><strong>Katherine Judith Anderson</strong> (Western Washington University)</li>
 						<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
 						<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
 						<li><strong>Ava Bindas</strong> (University of California Davis)</li>
