--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Sarah Ohmer</p>
 
-						<p><strong>Assessment Guide:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>assess. guide:</strong> Pearl Chaozon Bauer <a class="mail" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Copyeditor:</strong> H Fogarty</p>
 						
@@ -143,7 +143,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assessments/(post-)colonial_biography.html</a>.</p>
+					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assessments/(post-)colonial_biography.html</a>.</p>
 				</section>
 			</main>
 			
