--- a/html/assessments/archives_of_empire.html
+++ b/html/assessments/archives_of_empire.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Vani Kannan</p>
 
-						<p><strong>Assessment Guide:</strong> Anne Schwan <a class="mail" href="mailto:A.Schwan@napier.ac.uk?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>assess. guide:</strong> Anne Schwan <a class="mail" href="mailto:A.Schwan@napier.ac.uk?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
@@ -181,7 +181,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Katherine Judith Anderson, dev. “Undisciplining Archives of Empire.” Vani Kannan, peer rev.;  Anne Schwan, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/archives-of-empire.html" class="cite-link">https://undiscipliningvc.org/html/assessments/archives-of-empire.html</a>.</p>
+					<p>Katherine Judith Anderson, dev. “Undisciplining Archives of Empire.” Vani Kannan, peer rev.;  Anne Schwan, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/archives-of-empire.html" class="cite-link">https://undiscipliningvc.org/html/assessments/archives-of-empire.html</a>.</p>
 				</section>
 			</main>
 			
