--- a/html/assessments/recovering_reevaluating.html
+++ b/html/assessments/recovering_reevaluating.html
@@ -51,7 +51,7 @@
 
 						<p><strong>Peer Reviewer:</strong> Sarah Ohmer</p>
 
-						<p><strong>Assessment Guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>assess. guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
 						<p><strong>Copyeditor:</strong> H Fogarty</p>
 
@@ -148,7 +148,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assessment guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assessments/recovering_reevaluating.html</a>.</p>
+					<p>Riya Das, dev. “Recovering and Reevaluating Anglophone Writers.” Sarah Ohmer, peer rev.; Adrian S. Wisnicki, assess. guide. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/recovering_reevaluating.html" class="cite-link">https://undiscipliningvc.org/html/assessments/recovering_reevaluating.html</a>.</p>
 				</section>
 			</main>
 			
