--- a/sitemap.html
+++ b/sitemap.html
@@ -152,13 +152,12 @@
 										<li><a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a></li>
 									</ol>
 								</li>
+								<li>Students in the Archives
+									<ol>
+										<li><a href="/html/assessments/archives-of-empire.html">Archives of Empire</a></li>
+									</ol>
+								</li>
 							</ol>
-							<li>Studdents in the Archives
-								<ol>
-									<li><a href="/html/assessments/archives-of-empire.html">Archives of Empire</a></li>
-								</ol>
-							</li>
-						</ol>
 						</li>
 
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
@@ -169,9 +168,9 @@
 								<li><a href="/html/about/assistant_editors.html">Assistant Editors</a></li>
 								<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 								<li><a href="/html/about/bibliography.html">Bibliography</a></li>
+								<li><a href="/html/about/call_for_assessments.html">Call for Assessments (2023)</a></li>
 								<li><a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li>
 								<!-- <li><a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editors (2022)</a></li> -->
-								<!-- <li><a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a></li> -->
 							</ol>
 						</li>
 					
