--- a/html/about/call_for_assessments.html
+++ b/html/about/call_for_assessments.html
@@ -46,8 +46,14 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for assessments that model inclusive, antiracist, antiableist, and anticolonial assessment practices for teaching the nineteenth century. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
+					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for assessments that model inclusive, antiracist, antiableist, and anticolonial assessment practices for teaching the nineteenth century. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies. <strong>Submission Deadline:</strong> June 30, 2023</p>
+
+					<div class="action-button-container">
+						<a class="action-button calls" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Submit your assessment</a>
+					</div>
 				</section>
+
+				<hr class="hrcalls"/>
 
 				<section aria-labelledby="solicitation">
 					<h3 id="solicitation">Full Solicitation</h3>
