--- a/404.html
+++ b/404.html
@@ -17,7 +17,23 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css" integrity="sha512-aupidr80M36SeyviA/hZ2uEPnvt2dTJfyjm9y6z1MgaV13TgzmDiFdsH3cvSNG27mRIj7gJ2gNeg1HeySJyE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0013"/>
-		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0010"/>  	
+		<link rel="stylesheet" type="text/css" href="/css/content.css?=newVers_0010"/>
+		<script>
+			// Redirects for removed pages
+			// Created with ChatGPT (https://chat.openai.com/chat)
+			const redirects = {
+				"/html/about/call_for_assessments_2022.html": "/html/assessments/call_for_assessments.html",
+				"/html/about/call_for_assessments.html": "/html/assessments/call_for_assessments.html",
+				"/html/about/call_for_syllabi_and_syllabus_clusters.html": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
+				"/html/about/call_for_syllabus_clusters_2022": "/html/syllabi/call_for_syllabi_and_syllabus_clusters.html",
+			};
+			const currentPath = window.location.pathname;
+			if (redirects[currentPath]) {
+				window.location.replace(redirects[currentPath]);
+			} else {
+				document.write("Page not found.");
+			}
+		</script>
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
