--- a/html/syllabi.html
+++ b/html/syllabi.html
@@ -45,6 +45,11 @@
 					<p>These peer-reviewed syllabi are organized around specific themes that seek to challenge and expand traditional ideas of Victorian Studies. Introducing each syllabus is a short essay that expounds upon the critical framing of the syllabus to make explicit how an undisciplined approach to teaching Victorian Studies informs course design, the selection of materials, assignment construction, and pedagogical practices.</p>
 				</section>
 
+				<section aria-labelledby="syllabi+syllabus-clusters">
+					<h3 id="syllabi+syllabus-clusters">Call for Syllabi and Syllabus Clusters (Open)</h3>
+					<div><a href="/html/about/call_for_syllabi_and_syllabus_clusters.html"><img loading="lazy" src="/img/about/tiles/uvc_0040-1136px.jpg" srcset="/img/about/tiles/uvc_0040-1136px.jpg 1136w, /img/about/tiles/uvc_0040-930px.jpg 930w, /img/about/tiles/uvc_0040-814px.jpg 814w, /img/about/tiles/uvc_0040-662px.jpg 662w, /img/about/tiles/uvc_0040-568px.jpg 568w, /img/about/tiles/uvc_0040-530px.jpg 530w, /img/about/tiles/uvc_0040-465px.jpg 465w, /img/about/tiles/uvc_0040-407px.jpg 407w, /img/about/tiles/uvc_0040-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
+				</section>
+
 				<section aria-labelledby="multiethnic-literature">
 					<h3 id="multiethnic-literature">Beyond “Victorian” Literature</h3>
 					<div><a href="/html/syllabi/multiethnic_literature.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0067-1324px.jpg" srcset="/img/syllabi/tiles/uvc_0067-1324px.jpg 1324w, /img/syllabi/tiles/uvc_0067-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0067-930px.jpg 930w, /img/syllabi/tiles/uvc_0067-814px.jpg 814w, /img/syllabi/tiles/uvc_0067-662px.jpg 662w, /img/syllabi/tiles/uvc_0067-568px.jpg 568w, /img/syllabi/tiles/uvc_0067-530px.jpg 530w, /img/syllabi/tiles/uvc_0067-465px.jpg 465w, /img/syllabi/tiles/uvc_0067-407px.jpg 407w, /img/syllabi/tiles/uvc_0057-0058-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A cityscape featuring a large, complex clock in the background and a hot air balloon flying above."/><span>Multiethnic Literature: Global Neo-Victorians</span></a></div>
