--- a/html/assessments.html
+++ b/html/assessments.html
@@ -47,7 +47,7 @@
 
 				<section aria-labelledby="assessments">
 					<h3 id="assessments">Call for Assessments (2023)</h3>
-					<div><a href="/html/about/call_for_assessments.html"><img loading="lazy" src="/img/about/tiles/uvc_0039-1136px.jpg" srcset="/img/about/tiles/uvc_0039-1136px.jpg 1136w, /img/about/tiles/uvc_0039-930px.jpg 930w, /img/about/tiles/uvc_0039-814px.jpg 814w, /img/about/tiles/uvc_0039-662px.jpg 662w, /img/about/tiles/uvc_0039-568px.jpg 568w, /img/about/tiles/uvc_0039-530px.jpg 530w, /img/about/tiles/uvc_0039-465px.jpg 465w, /img/about/tiles/uvc_0039-407px.jpg 407w, /img/about/tiles/uvc_0039-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/></a></div>
+					<div><a href="/html/about/call_for_assessments.html"><img loading="lazy" src="/img/about/tiles/uvc_0040-1136px.jpg" srcset="/img/about/tiles/uvc_0040-1136px.jpg 1136w, /img/about/tiles/uvc_0040-930px.jpg 930w, /img/about/tiles/uvc_0040-814px.jpg 814w, /img/about/tiles/uvc_0040-662px.jpg 662w, /img/about/tiles/uvc_0040-568px.jpg 568w, /img/about/tiles/uvc_0040-530px.jpg 530w, /img/about/tiles/uvc_0040-465px.jpg 465w, /img/about/tiles/uvc_0040-407px.jpg 407w, /img/about/tiles/uvc_0040-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
 				</section>
 
 				<section aria-labelledby="students-in-the-archives-1">
