--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessments">
 				<h2 id="assessments">Call for Assessments (2023)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/about/uvc_0039-1800px.jpg" srcset="/img/about/uvc_0039-1800px.jpg 1800w, /img/about/uvc_0039-1650px.jpg 1650w, /img/about/uvc_0039-1500px.jpg 1500w, /img/about/uvc_0039-1350px.jpg 1350w, /img/about/uvc_0039-1200px.jpg 1200w, /img/about/uvc_0039-1050px.jpg 1050w, /img/about/uvc_0039-900px.jpg 900w, /img/about/uvc_0039-750px.jpg 750w, /img/about/uvc_0039-600px.jpg 600w, /img/about/uvc_0039-450px.jpg 450w, /img/about/uvc_0039-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/>
+					<img src="/img/assessments/uvc_0040-1800px.jpg" srcset="/img/assessments/uvc_0040-1800px.jpg 1800w, /img/assessments/uvc_0040-1650px.jpg 1650w, /img/assessments/uvc_0040-1500px.jpg 1500w, /img/assessments/uvc_0040-1350px.jpg 1350w, /img/assessments/uvc_0040-1200px.jpg 1200w, /img/assessments/uvc_0040-1050px.jpg 1050w, /img/assessments/uvc_0040-900px.jpg 900w, /img/assessments/uvc_0040-750px.jpg 750w, /img/assessments/uvc_0040-600px.jpg 600w, /img/assessments/uvc_0040-450px.jpg 450w, /img/assessments/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
