--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -23,7 +23,7 @@
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 
 	<body class="essay">
-		<div class="text-container content about">
+		<div class="text-container content assessments">
 
 			<div data-include="nav">
 				<nav id="fallback-nav">
