--- a/html/assessments/call_for_assessments.html
+++ b/html/assessments/call_for_assessments.html
@@ -48,7 +48,7 @@
 
 					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for assessments that model inclusive, antiracist, antiableist, and anticolonial assessment practices for teaching the nineteenth century. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
-					<p class="center"><em>Submission Deadline:</em> June 30, 2023</p>
+					<p class="center"><em>Submission Deadline:</em> <strong>June 30, 2023</strong></p>
 
 					<div class="action-button-container">
 						<a class="action-button calls assessments-calls" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Submit your assessment</a>
