--- a/html/syllabi/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/syllabi/call_for_syllabi_and_syllabus_clusters.html
@@ -49,7 +49,8 @@
 					<p><em>Undisciplining the Victorian Classroom</em> is looking for syllabi and syllabus clusters that will model inclusive, antiracist, antiableist, and anticolonial course design for Victorian Studies at large. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
 
 					<div class="action-button-container">
-						<a class="action-button calls syllabi-calls" href="https://forms.gle/KQtEwgKPCJzWRW7FA">Submit your syllabus</a>
+						<a class="action-button calls" href="https://forms.gle/KQtEwgKPCJzWRW7FA">Submit your syllabus</a>
+						<a class="action-button calls syllabi-calls" href="https://forms.gle/giaXNjDEEWVbe2Gs7">Submit your syllabus cluster</a>
 					</div>
 				</section>
 
